--- a/.github/workflows/update-bin-data.yml
+++ b/.github/workflows/update-bin-data.yml
@@ -20,7 +20,7 @@ jobs:
         run: npm install puppeteer
         
       - name: Run bin collection script
-        run: node bin-collection.js
+        run: node bins.js
         
       - name: Commit and push if changed
         run: |
