--- a/.github/workflows/update-bin-data.yml
+++ b/.github/workflows/update-bin-data.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   update-data:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./binscraper
     steps:
       - uses: actions/checkout@v3
       
