--- a/.github/workflows/update-bin-data.yml
+++ b/.github/workflows/update-bin-data.yml
@@ -1,43 +1,57 @@
-
-
 name: Update Bin Collection Data
-
 on:
   schedule:
-    - cron: '0 2 * * MON'  # Runs at 2am every Monday
+    - cron: '0 2 * * MON'  # Fixed the space between * and MON
   workflow_dispatch:  # Allows manual triggering for testing
-
 jobs:
   update-data:
     runs-on: ubuntu-latest
-  
-     
     steps:
       - uses: actions/checkout@v3
       
+      - name: Debug directory structure BEFORE
+        run: |
+          pwd
+          ls -la
+          find . -name "package.json"
+          
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
           
+      - name: Create package.json if missing
+        run: |
+          if [ ! -f "package.json" ]; then
+            echo '{
+              "name": "binscraper",
+              "version": "1.0.0",
+              "type": "module",
+              "private": true,
+              "dependencies": {
+                "puppeteer": "^21.0.0"
+              }
+            }' > package.json
+            cat package.json
+          fi
+      
       - name: Install dependencies
         run: npm install puppeteer
+      
+      - name: Modify script for headless mode
+        run: |
+          if grep -q "headless: false" bins.js; then
+            sed -i 's/headless: false/headless: true, args: ["--no-sandbox", "--disable-setuid-sandbox"]/' bins.js
+            echo "Modified bins.js for headless mode"
+          fi
         
       - name: Run bin collection script
         run: node bins.js
-
-      - name: Debug directory structure
-        run: |
-          pwd
-          ls -la
-          find . -name "package.json"
         
       - name: Commit and push if changed
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add binCollections.json
-          git commit -m "Update bin collection data" -a || exit 0
+          git add -A
+          git commit -m "Update bin collection data" || echo "No changes to commit"
           git push
-
-          
