--- a/.github/workflows/update-bin-data.yml
+++ b/.github/workflows/update-bin-data.yml
@@ -1,63 +1,80 @@
-name: Update Bin Collection Data
-on:
-  schedule:
-    - cron: '0 2 * * MON'  # Fixed the space between * and MON
-  workflow_dispatch:  # Allows manual triggering for testing
-jobs:
-  update-data:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+ name: Create GitHub Actions compatible script
+  run: |
+    cat > github_bins.js << 'EOL'
+    import puppeteer from 'puppeteer-core';
+    import fs from 'fs';
+    
+    (async () => {
+      // Launch browser with explicit no-sandbox configuration
+      const browser = await puppeteer.launch({
+        headless: true,
+        executablePath: '/usr/bin/google-chrome',
+        args: [
+          '--no-sandbox',
+          '--disable-setuid-sandbox',
+          '--disable-dev-shm-usage',
+          '--disable-gpu',
+          '--window-size=1920,1080',
+        ]
+      });
       
-      - name: Debug directory structure BEFORE
-        run: |
-          pwd
-          ls -la
-          find . -name "package.json"
-          
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Modify script for headless mode
-        run: |
-          cat bins.js
-          sed -i 's/const browser = await puppeteer.launch({.*})/const browser = await puppeteer.launch({ headless: true, args: ["--no-sandbox", "--disable-setuid-sandbox"] })/' bins.js
-          cat bins.js   
-          
-      - name: Create package.json if missing
-        run: |
-          if [ ! -f "package.json" ]; then
-            echo '{
-              "name": "binscraper",
-              "version": "1.0.0",
-              "type": "module",
-              "private": true,
-              "dependencies": {
-                "puppeteer": "^21.0.0"
-              }
-            }' > package.json
-            cat package.json
-          fi
+      const page = await browser.newPage();
+      const result = [];
       
-      - name: Install dependencies
-        run: npm install puppeteer
+      // Navigate to council bin collection website
+      await page.goto('https://www.west-dunbarton.gov.uk/recycling-and-waste/bin-collection-day/');
       
-      - name: Modify script for headless mode
-        run: |
-          if grep -q "headless: false" bins.js; then
-            sed -i 's/headless: false/headless: true' bins.js
-            echo "Modified bins.js for headless mode"
-          fi
+      // Set screen size
+      await page.setViewport({width: 1080, height: 1024});
+      
+      // Click cookie banner
+      await page.locator('button.btn:nth-child(2)').click();
+      
+      // Type into search box
+      await page.type('#inputPostcode', 'G83 9DR');
+      
+      // Click go
+      await page.locator('button.btn-primary:nth-child(1)').click();
+      
+      // Select dropdown
+      await page.locator('#uprn').click();
+      for (let i = 0; i < 9; i++) {
+        await page.keyboard.down("ArrowDown");
+      }
+      
+      // Click Go
+      await page.locator('.btn-success').click();
+      
+      // Wait for the results to load
+      await page.waitForSelector('.round-info');
+      
+      // Extract bin collection data
+      const binData = await page.evaluate(() => {
+        const rounds = document.querySelectorAll('.round-info');
         
-      - name: Run bin collection script
-        run: node bins.js
-        
-      - name: Commit and push if changed
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add -A
-          git commit -m "Update bin collection data" || echo "No changes to commit"
-          git push
+        return Array.from(rounds).map(round => {
+          const binType = round.querySelector('div:nth-child(2)').textContent.trim();
+          const day = round.querySelector('div:nth-child(3) > span:nth-child(1)').textContent.trim();
+          const date = round.querySelector('div:nth-child(3) > span:nth-child(2)').textContent.trim();
+          
+          return {
+            binType,
+            day,
+            date
+          };
+        });
+      });
+      
+      console.log("Extracted bin data:", binData);
+      
+      // Write data to JSON file
+      fs.writeFileSync('binCollections.json', JSON.stringify(binData, null, 2));
+      
+      // Close the browser
+      await browser.close();
+    })().catch(error => {
+      console.error("Error running script:", error);
+      process.exit(1);
+    });
+    EOL
+    
